[tool.poetry]
name = "CDUB"
version = "0.2.2"
description = "Tool used to unblock Cookieduck"
authors = ["Isaac K <isaac@cookieduck.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
